Update KnownIntrinsics consumers
Retarget guest-safe intrinsic imports to guest staging and hub reads to the temporary core-owned DynamicHubIntrinsics declaration.